--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon -e js,json,css,hbs,html src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon -e js,json,css,hbs,html src/index.js",
+    "build": "postcss public/css/styles.css -o public/css/build.css"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,14 @@
   "homepage": "https://github.com/rinivelkum/pcjunkyard#readme",
   "devDependencies": {
     "autoprefixer": "^10.3.4",
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.12",
-    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.9"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
